--- a/rovi/Dockerfile
+++ b/rovi/Dockerfile
@@ -14,12 +14,17 @@ RUN apt-get update -q && apt-get install -y \
 RUN wget http://ftp.gnome.org/pub/GNOME/sources/aravis/0.6/aravis-0.6.0.tar.xz
 RUN tar -xvf aravis-0.6.0.tar.xz
 RUN cd aravis-0.6.0 && ./configure && make && make install
+#RUN if ! grep /usr/local/lib /etc/ld.so.conf ; then echo "/usr/local/lib" | tee -a /etc/ld.so.conf && ldconfig ; fi
+RUN echo "/usr/local/lib" | tee -a /etc/ld.so.conf && ldconfig
 
+# install Rviz plugin
+RUN apt install -y ros-noetic-jsk-visualization
 # Rovi_industrial setup
 RUN pip install git+https://github.com/UniversalRobots/RTDE_Python_Client_Library.git
 
-# Create catkin workspace
+# Create VT workspace
 RUN mkdir -p /root/catkin_ws/src
+RUN mkdir /ssd
 
 # Set the entrypoint
 COPY ./entrypoint.sh /root/entrypoint.sh
