--- a/rovi/docker-compose.yml
+++ b/rovi/docker-compose.yml
@@ -9,39 +9,21 @@ services:
       - DISPLAY=:0
     volumes:
       - type: bind
+        source: ~/.ros/log
+        target: /root/.ros/log
+      - type: bind
         source: /tmp/.X11-unix
         target: /tmp/.X11-unix
       - type: bind
         source: ~/catkin_ws/src
         target: /root/catkin_ws/src
       - type: bind
-        source: ~/ros_src2
-        target: /root/src
-    stdin_open: true
-    tty: true
-    privileged: true
-    network_mode: host
-    depends_on:
-      - rosnoetic
-  rosnoetic:
-    build:
-      context: ../
-      dockerfile: Dockerfile
-    environment:
-      - DISPLAY=:0
-      - QT_X11_NO_MITSHM=1
-    working_dir: /root
-    volumes:
-      - type: bind
-        source: ~/.ros/log
-        target: /root/.ros/log
-      - type: bind
-        source: /tmp/.X11-unix
-        target: /tmp/.X11-unix
+        source: ~/ssd
+        target: /ssd
     stdin_open: true
     tty: true
     privileged: true
     network_mode: host
     # devices:
     #   - /dev/ttyUSB0:/dev/ttyUSB0
-    #   - /dev/ttyACM0:/dev/ttyACM0
+    #   - /dev/ttyACM0:/dev/ttyACM0#    depends_on:
