--- a/rovi/docker-compose.yml
+++ b/rovi/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - DISPLAY=:0
+      - DISABLE_ROS1_EOL_WARNINGS=1
     volumes:
       - type: bind
         source: ~/.ros/log
@@ -18,7 +19,7 @@ services:
         source: ~/catkin_ws/src
         target: /root/catkin_ws/src
       - type: bind
-        source: ~/ssd
+        source: /ssd
         target: /ssd
     stdin_open: true
     tty: true
