--- a/ensenso/Dockerfile
+++ b/ensenso/Dockerfile
@@ -16,17 +16,8 @@ RUN mkdir -p /root/catkin_ws/src
 RUN mkdir /ssd
 
 # Install Ensenso SDK
-RUN apt-get update -q && apt-get install -y \
-    libusb-1.0-0-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
 COPY ensenso-sdk-4.*.deb /tmp/
-RUN apt-get update -q && \
-    ls -1 /tmp/ensenso-sdk-4.*.deb | head -n 1 | xargs apt-get install -y && \
-    rm /tmp/ensenso-sdk-4.*.deb \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get clean
+RUN cd /tmp && dpkg -i ensenso-sdk-4.*.deb
 
 # SDKのパスを環境変数で設定
 ENV ENSENSO_INSTALL=/opt/ensenso
